<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="211dp"
        android:text="@string/two"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="211dp"
        android:text="@string/zero"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Clear"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="116dp"
        android:text="@string/three"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="116dp"
        android:text="@string/six"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="116dp"
        android:text="@string/nine"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="211dp"
        android:text="@string/eight"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="306dp"
        android:text="@string/seven"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="306dp"
        android:text="@string/dot"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="306dp"
        android:text="@string/one"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="306dp"
        android:text="@string/four"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="211dp"
        android:text="@string/five"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plus"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="16dp"
        android:text="@string/minus"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="16dp"
        android:text="@string/multiply"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="16dp"
        android:text="@string/divide"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="16dp"
        android:text="@string/equals"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Exp"
        android:layout_width="368dp"
        android:layout_height="89dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="22dp"
        android:background="#313131"
        android:textSize="30dp"
        android:textAlignment="viewEnd"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>